# reccmp

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  README.md  _lego_island_specific.md  build-schema.json  generate_schemas.py  package-lock.json  package.json  playwright.config.js  project-schema.json  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  user-schema.json
.github/: dependabot.yml
.github/workflows/: binfile-lego-container.yml  binfile-lego.yml  binfile-ski.yml  binfiles.yml  format.yml  install.yml  legobin.yml  playwright.yml  publish.yml  unittest-ghidra.yml  unittest.yml
docs/: annotations.md  csv.md  intro.md  project_files.md  recommendations.md
reccmp/: color.py  difflib.py  dir.py  types.py  utils.py
reccmp/analysis/: __init__.py  crt_startup.py  float_const.py  funcinfo.py  imports.py  vtordisp.py
reccmp/assets/: __init__.py  events.js  global.d.ts  globals.js  main.js  provider.js  reccmp-build-schema.json  reccmp-project-schema.json  reccmp-user-schema.json  reccmp.js  state.js  template.html  types.ts
reccmp/compare/: analyze.py  core.py  csv.py  db.py  diff.py  event.py  functions.py  ingest.py  lines.py  match_msvc.py  mutate.py  pinned_sequences.py  queries.py  report.py  variables.py  verify.py
reccmp/cvdump/: analysis.py  cvinfo.py  parser.py  runner.py  symbols.py  types.py
reccmp/decomp/: utils.py
reccmp/formats/: detect.py  elf.py  exceptions.py  image.py  mz.py  (+3 more)
tests/: binfiles_test_setup.py  conftest.py  constants.py  ghidra_integration_test_setup.py  helpers.py  mock_types_db.py  raw_image.py  test_analysis_crt_startup.py  test_analysis_float_const.py  test_analysis_funcinfo.py  test_analysis_imports.py  test_analysis_vtordisp.py  test_asmcmp_utils.py  test_compare_analyze.py  test_compare_analyze_partial_floats.py  test_compare_db.py  test_compare_db_queries.py  test_compare_ingest_code.py  test_compare_ingest_csv.py  test_compare_ingest_cvdump.py  test_compare_init.py  test_compare_mutate.py  test_compare_mutate_match_array.py  test_compare_mutate_partial_floats.py  test_compare_output.py  test_csv.py  test_curly.py  test_cvdump.py  test_cvdump_analysis.py  test_cvdump_lines.py  test_cvdump_parser.py  test_cvdump_symbols.py  test_cvdump_types.py  test_demangler.py  test_demumble.py  test_dir.py  test_entity_obj.py  test_fixes.py  test_function_comparator.py  test_ghidra.py  (+32 more)
webui/: .gitignore  README.md  biome.json  package-lock.json  package.json  playwright.config.js  testdata.json  tsconfig.json
(+178 files in other folders)
