[metadata]
name = reccmp
version = attr: reccmp.VERSION
description = Python recompilation tools
license = AGPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Disassemblers
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
include_package_data = True
tests_require = file:requirements-tests.txt
install_requires = file:requirements.txt

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    reccmp-aggregate = reccmp.tools.aggregate:main
    reccmp-cvdump = reccmp.tools.cvdump:main
    reccmp-datacmp = reccmp.tools.datacmp:main
    reccmp-decomplint = reccmp.tools.decomplint:main
    reccmp-project = reccmp.tools.project:main
    reccmp-reccmp = reccmp.tools.asmcmp:main
    reccmp-roadmap = reccmp.tools.roadmap:main
    reccmp-stackcmp = reccmp.tools.stackcmp:main
    reccmp-verexp = reccmp.tools.verexp:main
    reccmp-vtable = reccmp.tools.vtable:main
    reccmp-ghidra-import = reccmp.ghidra.ghidra_import:main
